--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Lic Blog
-SEOTitle: 梁晨的博客 | Hux Blog
+SEOTitle: 梁晨的博客 | Lic Blog
 header-img: img/home-bg.jpg
 email: cliang935@gmail.com
 description: "Aim higher, achieve further."
