--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,9 @@ netease_comment: false
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 #sidebar-about-description: "For the next quantum leap<br>离开世界之前，一切都是过程"
-sidebar-about-description: "Aim higher, achieve further."
+sidebar-about-description: "我对自己的要求很低：我活在世上，无非想要明白些道理，遇见些有趣的事。倘能如我所愿，我的一生就算成功。————王小波"
 sidebar-avatar: /img/avatar-cliang.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+
 
 
 
